--- a/src/App.scss
+++ b/src/App.scss
@@ -1,62 +1,89 @@
 .App {
-    text-align: center;
+	text-align: center;
+}
+
+.App-logo {
+	height: 40vmin;
+	pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
+}
+
+.App-header {
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
+}
+
+.App-link {
+	color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.w-80 {
+	width: 80%;
+}
+
+.row-top {  
+	color: black;
+	border-radius: 5px 5px 0px 0px;
+	div {
+    background-color: white;
+		padding: 2px;
+	}
+	.id {
+    border-radius: 5px 0px 0px 0px;
+		border-left: 1px solid black;
+		border-bottom: 1px solid black;
+    border-top: 1px solid black;
+	}
+	.task {
+		border-left: 1px solid black;
+		border-bottom: 1px solid black;
+    border-top: 1px solid black;
+	}
+	.done {
+		border-left: 1px solid black;
+		border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-radius: 0px 5px 0px 0px;
+    border-right: 1px solid black;
+	}
+}
+
+.row-bottom {
+  div:first-child {
+    border-bottom-left-radius: 10px;
+    border-left: 1px solid black;
   }
-  
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
+  div:last-child {
+    border-bottom-right-radius: 10px;
+    border-right: 1px solid black;
   }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
+  div{
+    background-color: white;
+    color: black;
+    border-bottom: 1px solid black;
+    button {
+      background-color: transparent;
+      border: none;
     }
   }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
-  
-  .w-80 {
-    width: 80%;
-  } 
-  
-  .flex {
-    display: flex;
-    flex-wrap: wrap;
-    .done-tasks {
-      width: 70%;
-      justify-content: center;
-      margin-left: 10%;
-    }
-    .add-task {
-      width: 10%;
-      justify-content: center;  
-      button {
-        background: none;
-        border: none;
-        color: white;
-      }
-    }
-  }
+}
